--- a/app/views/locale_lab/translations/show.html.erb
+++ b/app/views/locale_lab/translations/show.html.erb
@@ -3,7 +3,7 @@
 %>
 
 <div class="content">
-  <div class="translations-overview">
+  <div class="key-overview">
     <%= render 'navigation_overview' %>
 
     <% if @translations.present? %>
