--- a/app/assets/stylesheets/locale_lab/application.css
+++ b/app/assets/stylesheets/locale_lab/application.css
@@ -1,18 +1,4 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- */
-
-/*
 ** Setup
 */
 @import "setup/variables.css";
@@ -30,7 +16,12 @@
 /*
 ** Components
 */
+@import "components/card.css";
+
 @import "components/current-application.css";
 @import "components/translations-explorer.css";
-@import "components/translations-card.css";
+
+@import "components/keys-overview.css";
+@import "components/key.css";
+
 @import "components/editor.css";
