--- a/app/views/locale_lab/translations/_navigation_overview.html.erb
+++ b/app/views/locale_lab/translations/_navigation_overview.html.erb
@@ -1,18 +1,23 @@
 <%= turbo_frame_tag('navigation_overview') do %>
-  <header>
+  <header class="key-overview-header">
     <h2><%= @navigation.path %></h2>
     <ul class="actions">
       <li>
         <%=
-          link_to t('.new'), locale_lab.new_translation_path(scope: @navigation.path)
+          link_to t('.new'), locale_lab.new_translation_path(scope: @navigation.path), class: 'button'
         %>
       </li>
       <li>
-        <% @yamls.each do |yaml| %>
-          <%=
-            button_tag t('.edit_yaml', language: yaml[:locale]), type: 'button', data: { controller: 'yaml', yaml_yaml_value: yaml[:content], yaml_editor_outlet: '.editor', action: 'click->yaml#editInEditor' }
-          %>
-        <% end %>
+        <ul>
+          <% @yamls.each do |yaml| %>
+            <li>
+              <%=
+                button_tag t('.edit_yaml', language: yaml[:locale]), type: 'button', class: 'button', data: { controller: 'yaml', yaml_yaml_value: yaml[:content], 
+                  yaml_editor_outlet: '.editor', action: 'click->yaml#editInEditor' }
+              %>
+            </li>
+          <% end %>
+        </ul>
       </li>
     </ul>
   </header>
