--- a/app/views/locale_lab/shared/_current_application.html.erb
+++ b/app/views/locale_lab/shared/_current_application.html.erb
@@ -1,4 +1,7 @@
   <div class="current-application">
     <strong class="application"><%= application_name %></strong>
-    <span class="branch"><%= current_branch %></span>
+    <span class="branch">
+      <svg class="branch-icon" width="12" height="14" fill="0" xmlns="http://www.w3.org/2000/svg"><path d="M7.5 2.25a2.25 2.25 0 0 1 4.315-.893c.164.378.22.794.164 1.203A2.25 2.25 0 0 1 10.5 4.372V5A2.5 2.5 0 0 1 8 7.5H4a1 1 0 0 0-1 1v1.128a2.251 2.251 0 1 1-1.5 0V4.372a2.25 2.25 0 1 1 1.5 0v1.836A2.493 2.493 0 0 1 4 6h4a1 1 0 0 0 1-1v-.628A2.25 2.25 0 0 1 7.5 2.25Zm-6 0a.75.75 0 1 0 1.5 0 .75.75 0 0 0-1.5 0Zm8.25-.75a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5ZM2.25 11a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5Z"/></svg>
+      <%= current_branch %>
+    </span>
   </div>
