--- a/app/views/locale_lab/translations/_navigation.html.erb
+++ b/app/views/locale_lab/translations/_navigation.html.erb
@@ -1,22 +1,43 @@
-<nav id="translations-explorer" class="translations-explorer">
-  <h2><%= t '.title' %></h2>
-  <ul>
-    <% if navigation.parent_folder %>
-      <li class="folder folder-up">
-        📁 <%= link_to '..', locale_lab.translation_path(navigation.parent_folder) %>
-      </li>
-    <% else %>
-      <li class="folder folder-up">
-        📁 <%= link_to '..', locale_lab.root_path %>
-      </li>
-    <% end %>
+<nav class="folder-navigation">
+    <ul class="folder-actions">
+      <% if navigation.parent_folder %>
+        <li class="folder-up">
+          <%= link_to 'back', locale_lab.translation_path(navigation.parent_folder), class: 'button' %>
+        </li>
+      <% else %>
+        <li class="folder-up">
+          <%= link_to 'back', locale_lab.root_path, class: 'button' %>
+        </li>
+      <% end %>
 
+      <li class="folder-dropdown">
+        <a href="#" class="button">navDropdown</a>
+      </li>
+
+      <li class="folder-move">
+        <a href="#" class="button">Move</a>
+      </li>
+
+      <li class="folder-duplicate">
+        <a href="#" class="button">Dupe</a>
+      </li>
+
+      <li class="folder-remove">
+        <a href="#" class="button">Remove</a>
+      </li>
+    </ul>
+  </ul>
+
+  <ul class="folder-items">
     <% navigation.folders.each do |folder| %>
       <%
         label = folder.split('.').last
       %>
       <li class="folder">
-        📁 <%= link_to label, locale_lab.translation_path(folder) %>
+        <%= link_to locale_lab.translation_path(folder) do %>
+          <svg class="folder-icon" width="12" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11.044 1.677H4.78c-.176 0-.401-.378-.693-.726-.267-.317-.552-.496-.77-.496h-2.26C.476.455 0 .795 0 1.383v8.96c0 .592.476 1.112 1.058 1.112h9.986c.581 0 .956-.52.956-1.112V2.624c0-.592-.375-.947-.956-.947Zm-9.987-.611h2.067c.146 0 .322.061.536.317.454.546.581.905 1.121.905h6.263c.247 0 .356.084.356.336v.886H.6V1.383c0-.344.386-.317.458-.317Zm9.987 9.778H1.057c-.243 0-.457-.237-.457-.5V4.121h10.8v6.221c0 .23-.098.5-.356.5Z" fill="#222"/></svg>
+          <%= label %>
+        <% end %>
       </li>
     <% end %>
 
@@ -26,7 +47,7 @@
         label = content_tag(:strong, label) if key == local_assigns[:path]
       %>
       <li class="key">
-        📃 <%= link_to label, locale_lab.translation_path(key) %>
+        <%= link_to label, locale_lab.translation_path(key) %>
       </li>
     <% end %>
   </ul>
