Add icon buttons

--- a/app/assets/stylesheets/locale_lab/components/keys-overview.css
+++ b/app/assets/stylesheets/locale_lab/components/keys-overview.css
@@ -5,6 +5,15 @@
   align-items: center;
   margin-bottom: var(--base-size-24);
 
+  h2 {
+    color: var(--fgColor-muted);
+    font-weight: var(--base-text-weight-bold);
+  }
+
+  .actions {
+    margin-left: auto;
+  }
+
   .actions, .actions ul {
     display: flex;
   }
