--- a/app/views/locale_lab/translations/_navigation.html.erb
+++ b/app/views/locale_lab/translations/_navigation.html.erb
@@ -2,11 +2,17 @@
     <ul class="folder-actions">
       <% if navigation.parent_folder %>
         <li class="folder-up">
-          <%= link_to 'back', locale_lab.translation_path(navigation.parent_folder), class: 'button' %>
+          <%= link_to locale_lab.translation_path(navigation.parent_folder), class: 'button icon-button icon-button-stroke' do %>
+            <svg width="10" height="15" xmlns="http://www.w3.org/2000/svg"><path d="m8.075 1.788-6 6 6 6" stroke-width="2" stroke-linecap="round"/></svg>
+            <%= t('.back') %>
+          <% end %>
         </li>
       <% else %>
         <li class="folder-up">
-          <%= link_to 'back', locale_lab.root_path, class: 'button' %>
+          <%= link_to locale_lab.root_path, class: 'button icon-button icon-button-stroke' do %>
+            <svg width="10" height="15" xmlns="http://www.w3.org/2000/svg"><path d="m8.075 1.788-6 6 6 6" stroke-width="2" stroke-linecap="round"/></svg>
+            <%= t('.back') %>
+          <% end %>
         </li>
       <% end %>
 
@@ -15,15 +21,24 @@
       </li>
 
       <li class="folder-move">
-        <a href="#" class="button">Move</a>
+        <a href="#" class="button icon-button">
+          <svg width="16" height="17" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10.62 2.323 3.55 9.394l3.181 3.182 7.071-7.071-3.182-3.182Z"/><path fill-rule="evenodd" clip-rule="evenodd" d="m1.605 14.52 1.238-4.418 3.18 3.18-4.418 1.238ZM13.424.944a1.008 1.008 0 0 0-1.426 0l-.701.701 3.182 3.182.7-.7A1.008 1.008 0 0 0 15.18 2.7L13.424.944Z"/></svg>
+          Move
+        </a>
       </li>
 
       <li class="folder-duplicate">
-        <a href="#" class="button">Dupe</a>
+        <a href="#" class="button icon-button">
+          <svg width="19" height="19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.015.231h-6c-2.2 0-4 1.8-4 4-2.2 0-4 1.8-4 4v6c0 2.2 1.8 4 4 4h6c2.2 0 4-1.8 4-4 2.2 0 4-1.8 4-4v-6c0-2.2-1.8-4-4-4Zm-2 14c0 1.1-.9 2-2 2h-6c-1.1 0-2-.9-2-2v-6c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2v6Zm4-4c0 1.1-.9 2-2 2v-4c0-2.2-1.8-4-4-4h-4c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2v6Z" /><path d="M4.015 10.231h6v2h-6z"/><path d="M8.015 8.231v6h-2v-6z"/></svg>
+          Dupe
+        </a>
       </li>
 
       <li class="folder-remove">
-        <a href="#" class="button">Remove</a>
+        <a href="#" class="button icon-button">
+          <svg width="17" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.268 3.2h-3.1L11.89 1.094c-.358-.535-.911-.863-1.543-.863H6.538c-.632 0-1.218.328-1.542.863L3.716 3.2h-3.1a.596.596 0 0 0-.601.594v.593c0 .33.268.594.602.594h.602v11.875c0 1.312 1.078 2.375 2.408 2.375h9.63c1.33 0 2.409-1.063 2.409-2.375V4.981h.602a.595.595 0 0 0 .602-.594v-.593a.596.596 0 0 0-.602-.594ZM6.482 2.12a.224.224 0 0 1 .192-.108h3.536c.08 0 .156.042.193.107l.658 1.08-5.237.001.658-1.08Zm6.776 15.33H3.627a.598.598 0 0 1-.602-.594V4.981H13.86v11.875a.6.6 0 0 1-.602.594Zm-4.816-1.781a.598.598 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Zm-3.01 0a.6.6 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Zm6.02 0a.598.598 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Z"/></svg>
+          Remove
+        </a>
       </li>
     </ul>
   </ul>
@@ -35,7 +50,7 @@
       %>
       <li class="folder">
         <%= link_to locale_lab.translation_path(folder) do %>
-          <svg class="folder-icon" width="12" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11.044 1.677H4.78c-.176 0-.401-.378-.693-.726-.267-.317-.552-.496-.77-.496h-2.26C.476.455 0 .795 0 1.383v8.96c0 .592.476 1.112 1.058 1.112h9.986c.581 0 .956-.52.956-1.112V2.624c0-.592-.375-.947-.956-.947Zm-9.987-.611h2.067c.146 0 .322.061.536.317.454.546.581.905 1.121.905h6.263c.247 0 .356.084.356.336v.886H.6V1.383c0-.344.386-.317.458-.317Zm9.987 9.778H1.057c-.243 0-.457-.237-.457-.5V4.121h10.8v6.221c0 .23-.098.5-.356.5Z" fill="#222"/></svg>
+          <svg class="folder-icon" width="12" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11.044 1.677H4.78c-.176 0-.401-.378-.693-.726-.267-.317-.552-.496-.77-.496h-2.26C.476.455 0 .795 0 1.383v8.96c0 .592.476 1.112 1.058 1.112h9.986c.581 0 .956-.52.956-1.112V2.624c0-.592-.375-.947-.956-.947Zm-9.987-.611h2.067c.146 0 .322.061.536.317.454.546.581.905 1.121.905h6.263c.247 0 .356.084.356.336v.886H.6V1.383c0-.344.386-.317.458-.317Zm9.987 9.778H1.057c-.243 0-.457-.237-.457-.5V4.121h10.8v6.221c0 .23-.098.5-.356.5Z"/></svg>
           <%= label %>
         <% end %>
       </li>
