Add default height to autogrow

--- a/app/views/locale_lab/translations/_translation_with_key.html.erb
+++ b/app/views/locale_lab/translations/_translation_with_key.html.erb
@@ -11,6 +11,7 @@
 
       <%= f.text_area :value, value: translation.value, id: id, data: {
         controller: 'autogrow',
+        autogrow_height_value: '36px',
         translation_value_target: 'textArea',
         action: %w[
           input->autogrow#grow
