--- a/app/views/locale_lab/translations/_navigation_overview.html.erb
+++ b/app/views/locale_lab/translations/_navigation_overview.html.erb
@@ -14,7 +14,7 @@
           <% @yamls.each do |yaml| %>
             <li>
               <%=
-                button_tag yaml[:locale].upcase, type: 'button', class: 'button', data: { controller: 'yaml', yaml_yaml_value: yaml[:content],
+                button_tag yaml[:locale].upcase, type: 'button', class: 'button secondary-button', data: { controller: 'yaml', yaml_yaml_value: yaml[:content],
                   yaml_editor_outlet: '.editor', action: 'click->yaml#editInEditor' }
               %>
             </li>
