Sticky scrollable sidebar

--- a/app/assets/stylesheets/locale_lab/components/current-application.css
+++ b/app/assets/stylesheets/locale_lab/components/current-application.css
@@ -1,4 +1,5 @@
 .current-application {
+  height: var(--base-size-40);
   padding-left: var(--base-size-24);
   margin-bottom: var(--base-size-16);
 
