--- a/app/views/locale_lab/translations/_navigation.html.erb
+++ b/app/views/locale_lab/translations/_navigation.html.erb
@@ -34,12 +34,23 @@
         </a>
       </li>
 
-      <li class="folder-remove">
-        <a href="#" class="button icon-button">
-          <svg width="17" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.268 3.2h-3.1L11.89 1.094c-.358-.535-.911-.863-1.543-.863H6.538c-.632 0-1.218.328-1.542.863L3.716 3.2h-3.1a.596.596 0 0 0-.601.594v.593c0 .33.268.594.602.594h.602v11.875c0 1.312 1.078 2.375 2.408 2.375h9.63c1.33 0 2.409-1.063 2.409-2.375V4.981h.602a.595.595 0 0 0 .602-.594v-.593a.596.596 0 0 0-.602-.594ZM6.482 2.12a.224.224 0 0 1 .192-.108h3.536c.08 0 .156.042.193.107l.658 1.08-5.237.001.658-1.08Zm6.776 15.33H3.627a.598.598 0 0 1-.602-.594V4.981H13.86v11.875a.6.6 0 0 1-.602.594Zm-4.816-1.781a.598.598 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Zm-3.01 0a.6.6 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Zm6.02 0a.598.598 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Z"/></svg>
-          Remove
-        </a>
-      </li>
+      <% if navigation.path %>
+        <li class="folder-remove">
+          <%= button_to locale_lab.translation_path(navigation.path, is_folder: true),
+                        method: :delete,
+                        class: 'button icon-button',
+                        tabindex: '-1',
+                        form: {
+                          data: {
+                            turbo_method: :delete,
+                            turbo_confirm: t('.confirm_destroy_folder', folder: navigation.path)
+                          }
+                        } do %>
+            <svg width="17" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.268 3.2h-3.1L11.89 1.094c-.358-.535-.911-.863-1.543-.863H6.538c-.632 0-1.218.328-1.542.863L3.716 3.2h-3.1a.596.596 0 0 0-.601.594v.593c0 .33.268.594.602.594h.602v11.875c0 1.312 1.078 2.375 2.408 2.375h9.63c1.33 0 2.409-1.063 2.409-2.375V4.981h.602a.595.595 0 0 0 .602-.594v-.593a.596.596 0 0 0-.602-.594ZM6.482 2.12a.224.224 0 0 1 .192-.108h3.536c.08 0 .156.042.193.107l.658 1.08-5.237.001.658-1.08Zm6.776 15.33H3.627a.598.598 0 0 1-.602-.594V4.981H13.86v11.875a.6.6 0 0 1-.602.594Zm-4.816-1.781a.598.598 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Zm-3.01 0a.6.6 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Zm6.02 0a.598.598 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Z"/></svg>
+            <%= t('.destroy_folder') %>
+          <% end %>
+        </li>
+      <% end %>
     </ul>
   </ul>
 
